--- a/project/src/main/res/layout/payment_widget.xml
+++ b/project/src/main/res/layout/payment_widget.xml
@@ -63,22 +63,22 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <Button
+        <com.expedia.bookings.widget.TextView
             android:id="@+id/payment_option_credit_debit"
             style="@style/HotelPaymentOption"
-            android:drawableLeft="@drawable/ic_credit_card"
-            android:text="@string/checkout_payment_option_credit_debit_label"></Button>
+            android:drawableLeft="@drawable/hotel_credit_card_tint"
+            android:text="@string/checkout_payment_option_credit_debit_label" />
 
         <View
             android:layout_width="fill_parent"
-            android:layout_height="1dp"
-            android:background="@color/cars_actionbar_text_color" />
+            android:layout_height="1px"
+            android:background="#E0E0E0" />
 
-        <Button
+        <com.expedia.bookings.widget.TextView
             android:id="@+id/payment_option_google_wallet"
             style="@style/HotelPaymentOption"
-            android:drawableLeft="@drawable/ic_google_wallet_logo"
-            android:text="@string/checkout_payment_option_google_wallet_label"></Button>
+            android:drawableLeft="@drawable/ic_hotel_google_wallet"
+            android:text="@string/checkout_payment_option_google_wallet_label" />
 
     </LinearLayout>
 
