--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -318,4 +318,8 @@
     <color name="mer_email_checkbox_checked_color">#00B9E6</color>
     <color name="mer_email_text_color">#F7F8FA</color>
 
+    <!-- Hotels V2 Checkout Colors -->
+    <color name="hotelsv2_checkout_text_color">#676767</color>
+    <color name="hotelsv2_checkout_divider_color">#DFDFDF</color>
+
 </resources>
