--- a/project/src/main/res/values/styles_hotels.xml
+++ b/project/src/main/res/values/styles_hotels.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
     <style name="V2.Theme.Hotels" parent="Whitelabel.HotelTheme.Base" />
 
     <style name="V2.Theme.Transparent" parent="Whitelabel.HotelTheme.Base">
@@ -60,16 +58,49 @@
         <item name="android:src">@drawable/lx_minus_icon</item>
     </style>
 
+    <!-- New Hotels Checkout Styling -->
     <style name="HotelPaymentOption">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:padding">18dp</item>
+        <item name="android:paddingTop">13dp</item>
+        <item name="android:paddingBottom">13dp</item>
+        <item name="android:paddingLeft">20dp</item>
+        <item name="android:paddingRight">20dp</item>
         <item name="android:background">?android:attr/selectableItemBackground</item>
-        <item name="android:drawablePadding">24dp</item>
-        <item name="android:textColor">@color/cars_actionbar_text_color</item>
+        <item name="android:drawablePadding">18dp</item>
+        <item name="android:textColor">@color/hotelsv2_checkout_text_color</item>
         <item name="android:gravity">left|center_vertical</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textSize">16dp</item>
+        <item name="android:textSize">15sp</item>
+        <item name="textStyle">normal</item>
+    </style>
+
+    <style name="HotelCheckoutImageSummary">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">#ffffff</item>
+    </style>
+
+    <style name="HotelCheckoutImageSummary.Name" parent="HotelCheckoutImageSummary">
+        <item name="android:textSize">15dp</item>
+        <item name="textStyle">medium</item>
+    </style>
+
+    <style name="HotelCheckoutImageSummary.Common" parent="HotelCheckoutImageSummary">
+        <item name="android:textSize">12dp</item>
+        <item name="textStyle">normal</item>
+    </style>
+
+    <style name="HotelCheckoutSummaryCommon">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/hotelsv2_checkout_text_color</item>
+    </style>
+
+    <style name="HotelCheckoutSummaryCommon.Common" parent="HotelCheckoutSummaryCommon">
+        <item name="android:textSize">12dp</item>
+        <item name="textStyle">normal</item>
     </style>
 
 </resources>
