--- a/project/src/main/res/values/styles_cars.xml
+++ b/project/src/main/res/values/styles_cars.xml
@@ -149,7 +149,7 @@
     </style>
 
     <style name="CarButton" parent="android:Widget.Button">
-        <item name="android:background">?attr/skin_carsPrimaryColor</item>
+        <item name="android:background">?attr/primary_color</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:paddingLeft">20dp</item>
