--- a/project/src/main/res/layout/payment_widget.xml
+++ b/project/src/main/res/layout/payment_widget.xml
@@ -58,6 +58,31 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/section_payment_options_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/payment_option_credit_debit"
+            style="@style/HotelPaymentOption"
+            android:drawableLeft="@drawable/ic_credit_card"
+            android:text="@string/checkout_payment_option_credit_debit_label"></Button>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:background="@color/cars_actionbar_text_color" />
+
+        <Button
+            android:id="@+id/payment_option_google_wallet"
+            style="@style/HotelPaymentOption"
+            android:drawableLeft="@drawable/ic_google_wallet_logo"
+            android:text="@string/checkout_payment_option_google_wallet_label"></Button>
+
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/section_billing_info_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
