Add error state to coupon

--- a/project/src/main/res/layout/coupon_widget.xml
+++ b/project/src/main/res/layout/coupon_widget.xml
@@ -33,15 +33,31 @@
             android:scaleType="center"
             android:src="@drawable/coupon" />
 
-        <EditText
-            android:id="@+id/edit_coupon_code"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="@string/enter_coupon_code"
-            android:inputType="textCapCharacters"
-            android:singleLine="true" />
+            android:orientation="vertical">
 
+            <EditText
+                android:id="@+id/edit_coupon_code"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/enter_coupon_code"
+                android:inputType="textCapCharacters"
+                android:singleLine="true" />
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/error_message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/coupon_error_unrecognized"
+                android:textColor="@color/error_color"
+                android:textSize="14sp"
+                android:visibility="gone"
+                app:textStyle="light" />
+        </LinearLayout>
+        
     </LinearLayout>
 
 
