Introduce a HotelResultsViewModel to deliver data
To the list and map. Will follow up with more refactoring for the list and map
data. Also renamed the hotel preview stuff to a Carousel which I am sure is
going to get mispelt by myself over and over again.

Also remove the injection of `HotelResultsPresenter`.

--- a/project/src/main/res/layout/widget_hotel_results.xml
+++ b/project/src/main/res/layout/widget_hotel_results.xml
@@ -20,7 +20,7 @@
         android:minHeight="?attr/actionBarSize" />
 
     <LinearLayout
-        android:id="@+id/preview_layout"
+        android:id="@+id/hotel_carousel_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
@@ -32,8 +32,8 @@
             android:layout_height="8dp"
             android:background="@drawable/map_shadow" />
 
-        <com.expedia.bookings.widget.HotelMarkerPreviewRecycler
-            android:id="@+id/hotel_marker_preview"
+        <com.expedia.bookings.widget.HotelCarouselRecycler
+            android:id="@+id/hotel_carousel"
             android:layout_width="match_parent"
             android:layout_height="90dp" />
     </LinearLayout>
