4897 Setting up view for filters

--- a/project/src/main/res/layout/widget_hotel_results.xml
+++ b/project/src/main/res/layout/widget_hotel_results.xml
@@ -37,6 +37,12 @@
         android:layout_height="match_parent"
         android:layout_marginTop="?attr/actionBarSize" />
 
+    <com.expedia.bookings.widget.HotelFilterView
+        android:id="@+id/filter_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize" />
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
