--- a/project/src/main/res/layout/hotel_cell.xml
+++ b/project/src/main/res/layout/hotel_cell.xml
@@ -71,14 +71,18 @@
             android:paddingRight="11dp">
 
             <com.expedia.bookings.widget.TextView
-                android:id="@+id/strike_through_price"
+                android:id="@+id/discount_percentage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:text="$100"
-                android:textColor="@color/hotel_cell_light_gray_text"
-                android:textSize="13sp" />
-
+                android:background="@drawable/guest_rating_background"
+                android:gravity="center"
+                android:paddingBottom="4dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:paddingTop="3dp"
+                android:textColor="#ffffff"
+                android:textSize="10sp"
+                app:textStyle="medium" />
 
         </LinearLayout>
     </FrameLayout>
@@ -122,13 +126,29 @@
             android:gravity="center_vertical|right"
             android:orientation="vertical">
 
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/price_per_night"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:textStyle="medium"
-                android:textColor="@color/hotel_cell_gray_text"
-                android:textSize="15sp" />
+                android:orientation="horizontal">
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/strike_through_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:alpha=".7"
+                    android:gravity="center"
+                    android:paddingRight="4dp"
+                    android:textColor="@color/hotel_cell_gray_text"
+                    android:textSize="12sp" />
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/price_per_night"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/hotel_cell_gray_text"
+                    android:textSize="15sp"
+                    app:textStyle="medium" />
+            </LinearLayout>
 
             <com.expedia.bookings.widget.TextView
                 android:id="@+id/top_amenity_title"
