--- a/project/src/main/res/layout/widget_hotel_filter.xml
+++ b/project/src/main/res/layout/widget_hotel_filter.xml
@@ -368,8 +368,19 @@
                     android:textColor="@color/hotels_primary_color" />
 
             </LinearLayout>
+
         </LinearLayout>
 
     </com.expedia.bookings.widget.ScrollView>
+
+    <com.expedia.bookings.widget.DynamicFeedbackWidget
+        android:id="@+id/dynamic_feedback_container"
+        android:layout_width="match_parent"
+        android:layout_height="36dp"
+        app:cardCornerRadius="18dp"
+        android:layout_margin="16dp"
+        android:clickable="true"
+        app:cardPreventCornerOverlap="false"
+        android:layout_gravity="bottom" />
 
 </merge>
