--- a/project/src/main/res/layout/resort_fee_widget.xml
+++ b/project/src/main/res/layout/resort_fee_widget.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#ffffff"
+    android:background="@drawable/spinner_ripple"
     android:orientation="horizontal"
-    android:padding="12dp">
+    android:paddingBottom="12dp"
+    android:paddingLeft="18dp"
+    android:paddingRight="18dp"
+    android:paddingTop="12dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -15,14 +19,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/hotel_fees_for_this_stay"
-            android:textColor="@color/text_light_gray" />
+            android:textColor="@color/hotelsv2_checkout_text_color"
+            android:textSize="13sp"
+            app:textStyle="medium" />
 
         <com.expedia.bookings.widget.TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/not_included_in_the_price"
-            android:textColor="@color/text_light_gray" />
+            android:textColor="@color/hotelsv2_checkout_text_color"
+            android:textSize="11sp"
+            app:textStyle="normal" />
     </LinearLayout>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="13dp"
+        android:src="@drawable/details_info" />
 
     <com.expedia.bookings.widget.TextView
         android:id="@+id/resort_fees_text"
@@ -30,6 +45,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:gravity="right"
-        android:textColor="@color/text_light_gray" />
+        android:textColor="@color/hotelsv2_checkout_text_color"
+        android:textSize="13sp"
+        app:textStyle="medium" />
 
 </LinearLayout>
