--- a/project/src/main/res/layout/widget_hotel_info.xml
+++ b/project/src/main/res/layout/widget_hotel_info.xml
@@ -1,27 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingBottom="18dp"
+    android:paddingLeft="18dp"
+    android:paddingRight="18dp">
 
     <com.expedia.bookings.widget.TextView
         android:id="@+id/info_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="6dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="6dp"
-        android:textColor="#676767"
-        android:textSize="13sp"
-        android:textStyle="bold" />
+        android:textColor="@color/hotelsv2_checkout_text_color"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:textStyle="medium" />
 
     <com.expedia.bookings.widget.TextView
         android:id="@+id/info_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:textColor="#676767"
-        android:textSize="11sp" />
+        android:lineSpacingExtra="3dp"
+        android:textColor="@color/hotelsv2_checkout_text_color"
+        android:textSize="13sp" />
 
 </LinearLayout>
