--- a/project/src/main/res/layout/widget_special_notice.xml
+++ b/project/src/main/res/layout/widget_special_notice.xml
@@ -6,15 +6,15 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="12dp"
         android:background="@android:color/transparent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="18dp">
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/content_description"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="12dp" />
+            android:textColor="@color/hotelsv2_checkout_text_color" />
 
     </LinearLayout>
 
