--- a/project/src/main/res/layout/widget_hotel_search_params.xml
+++ b/project/src/main/res/layout/widget_hotel_search_params.xml
@@ -13,6 +13,7 @@
         android:paddingTop="?attr/actionBarSize">
 
         <LinearLayout
+            android:id="@+id/search_params_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/hotels_primary_color"
