--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -14,6 +14,8 @@
     <color name="tablet_legal_blurb_text_color">#A7DAFF</color>
     <color name="tablet_confirmation_color">#374F6E</color>
     <color name="tablet_confirmation_action_color">#2970CC</color>
+    <color name="action_bar_text_selected">#FFFFFF</color>
+    <color name="action_bar_text_unselected">#8CFFFFFF</color>
 
     <!-- Launch screen colors -->
     <color name="launch_primary">#f3f3f3</color>
